<resources>
    <string name="app_name">GC- Gym Care</string>
    <string name="welcome_message">Welcome to GC- Gym Care</string>
    <string name="motivational_quote">\"The pain you feel today will be the strength you feel tomorrow.\"</string>
    <string name="next_button_desc">Next</string>
    <string name="gym_profile_setup">Gym Profile Setup</string>
    <string name="tap_to_upload">Tap to upload photo</string>
    <string name="gym_name_hint">Gym Name (e.g., Iron Forge)</string>
    <string name="owner_name_hint">Owner Name (e.g., Krishna)</string>
    <string name="phone_number_hint">Enter Phone Number</string>
    <string name="save_continue">Save &amp; Continue</string>
    <string name="Record_Supplement_Sale"> Record Supplement Sale</string>
    <string name="Customer_Name">Customer Name</string>
    <string name="Item_Name">Item Name (e.g., Whey Protein)</string>
    <string name="Total_Item">Total Item Price (₹)</string>
    <string name="Amount_Paid_Now">Amount Paid Now (₹)</string>
    <string name="Save_Sale">Save Sale</string>
    <string name="Supplement_Timeline">Supplement Timeline</string>
    <string name="Buy_Item">Buy Item</string>
    <string name="Receive_Pay">Receive Pay</string>
    <string name="History">History</string>
    <string name="Delete">Delete</string>
    <string name="Gym_Owner_Photo">Gym Owner Photo</string>
    <string name="Gym_Owner">Gym Owner</string>
    <string name="Members">Members</string>
    <string name="Supps">Supplemets</string>
    <string name="Gym">Gym</string>
    <string name="Paid">Paid</string>
    <string name="Unpaid">Unpaid</string>
    <string name="Paid_Advance">Paid / Advanced</string>
    <string name="Due_Payments">Due Payments</string>
    <string name="advance_label">Advance: ₹%d</string>
    <string name="paid_in_full">Paid in Full</string>
    <string name="due_label">Due: ₹%d</string>
    <string name="expanded_advance">Currently in Advance: ₹%d</string>
    <string name="all_dues_clear">All Supplement Dues Clear.</string>
    <string name="remaining_amount">Remaining Amount to Pay: ₹%d</string>
    <string name="Add_New_Member">Add New Member</string>
    <string name="Tap_to_capture_photo">Tap to capture photo</string>
    <string name="Name">Name</string>
    <string name="example">E. G. Krishna</string>
    <string name="mobile_number">10-digit mobile number</string>
    <string name="Address">Address</string>
    <string name="one_month">1 Month - ₹800</string>
    <string name="three_month">3 Months - ₹2000</string>
    <string name="six_month">6 Months - ₹3500</string>
    <string name="twelve_month">12 Months - ₹6000</string>

    <string name="Select_Membership_Plan">Select Membership Plan *</string>
    <string name="City_or_local_area">City or local area</string>
</resources>